# asset-manager

./: Cargo.toml  LICENSE  README.md
asset-macros/: Cargo.toml
asset-macros/src/: ir.rs  lib.rs  parse.rs  utils.rs
asset-traits/: Cargo.toml
asset-traits/src/: lib.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
